Add basic boilerplate and a character list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+
+    // RxJava 2 (Reactive Streams)
+    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
+
+    // Dagger 2 (Injection)
+    implementation 'com.google.dagger:dagger:2.21'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.21'
+
+    // Butterknife (View Binding)
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    // Timber (Logging)
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    testImplementation 'junit:junit:4.12'
+
+    // Mockito (Unit test mocks)
+    testImplementation "org.mockito:mockito-core:2.25.1"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
