--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ android:
   - build-tools-28.0.3
   - android-28
 
-# default command is 'build connectedCheck', but we don't need instrumentation at the moment:
+before_script:
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+- chmod +x ./cc-test-reporter
+- ./cc-test-reporter before-build
+
 script:
 - ./gradlew build check
+
+after_script:
+- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
